--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0162.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0162.html
@@ -757,14 +757,14 @@
             <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
-        <span id="w_138" class="ocr_word" title="bbox 1670 1089 1778 1144">
+        <span id="w_138_0" class="ocr_word" title="bbox 1670 1089 1778 1144">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τὰ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;τὰ&amp;x003E;</ins>
           </span>
         </span>
-        <span id="w_139" class="ocr_word" title="bbox 1821 1091 2066 1144" lang="grc">
+        <span id="w_138_1" class="ocr_word" title="bbox 1670 1089 1778 1144">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φαινόμενα</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -872,11 +872,6 @@
             <ins title="nlp 2.00">ἄξονα</ins>
           </span>
         </span>
-        <span id="w_160" class="ocr_word" title="bbox 1999 1232 2064 1274" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δι-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 282 1303 570 1359">
         <span id="w_161" class="ocr_word" title="bbox 282 1323 315 1351">
@@ -884,9 +879,9 @@
             <ins title="nlp 2.00">15</ins>
           </span>
         </span>
-        <span id="w_162" class="ocr_word" title="bbox 334 1303 570 1359" lang="grc">
+        <span id="w_162_0" class="ocr_word" title="bbox 334 1303 570 1359">
           <span class="alternatives">
-            <ins title="nlp 2.00">νουμένην.</ins>
+            <ins class="alt" title="nlp 2.00">δινουμένην.</ins>
           </span>
         </span>
       </span>
@@ -2149,9 +2144,9 @@
             <del title="nlp 0.90">index</del>
           </span>
         </span>
-        <span id="w_388" class="ocr_word" title="bbox 1952 3056 2063 3092">
+        <span id="w_388_0" class="ocr_word" title="bbox 1952 3056 2063 3092">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërtianus</ins>
+            <ins class="alt" title="nlp 2.00">Laërtianus</ins>
           </span>
         </span>
       </span>
