--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0163.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0163.html
@@ -173,9 +173,14 @@
             <ins title="nlp 2.00">τοῖς</ins>
           </span>
         </span>
-        <span id="w_31" class="ocr_word" title="bbox 1297 428 1489 485" lang="grc">
+        <span id="w_31_0" class="ocr_word" title="bbox 1297 428 1489 485">
           <span class="alternatives">
-            <ins title="nlp 2.00">[ἄλλοις]</ins>
+            <ins class="alt" title="nlp 2.00">[ἄλλοις]</ins>
+          </span>
+        </span>
+        <span id="w_31_1" class="ocr_word" title="bbox 1297 428 1489 485">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_32" class="ocr_word" title="bbox 1520 428 1670 484" lang="grc">
@@ -186,11 +191,6 @@
         <span id="w_33" class="ocr_word" title="bbox 1702 436 1863 484" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ποιεῖν,</ins>
-          </span>
-        </span>
-        <span id="w_34" class="ocr_word" title="bbox 1893 446 1974 485" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μηδεμιᾶς</ins>
           </span>
         </span>
       </span>
@@ -376,9 +376,14 @@
             <ins title="nlp 2.00">ἰδίᾳ</ins>
           </span>
         </span>
-        <span id="w_71" class="ocr_word" title="bbox 589 715 721 769">
+        <span id="w_71_0" class="ocr_word" title="bbox 589 715 721 769">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;διὰ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;διὰ&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_71_1" class="ocr_word" title="bbox 589 715 721 769">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_72" class="ocr_word" title="bbox 758 729 807 757" lang="grc">
@@ -401,19 +406,14 @@
             <ins class="alt" title="nlp 1.00">ὑπ’</ins>
           </span>
         </span>
-        <span id="w_76" class="ocr_word" title="bbox 1532 715 1729 771" lang="grc">
+        <span id="w_76_0" class="ocr_word" title="bbox 1532 715 1729 771">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;αὐτοῦ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;αὐτοῦ&amp;x003E;</ins>
           </span>
         </span>
-        <span id="w_77" class="ocr_word" title="bbox 1759 717 1840 760" lang="grc">
+        <span id="w_76_1" class="ocr_word" title="bbox 1532 715 1729 771">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
-          </span>
-        </span>
-        <span id="w_78" class="ocr_word" title="bbox 1870 714 1976 772" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀέρα</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -995,9 +995,9 @@
             <del title="nlp 0.90">atque</del>
           </span>
         </span>
-        <span id="w_177" class="ocr_word" title="bbox 1897 1362 1980 1405" lang="grc">
+        <span id="w_177_0" class="ocr_word" title="bbox 1897 1362 1980 1405">
           <span class="alternatives">
-            <ins title="nlp 2.00">uictum,</ins>
+            <ins class="alt" title="nlp 2.00">vitum,</ins>
           </span>
         </span>
       </span>
