--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0164.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0164.html
@@ -237,14 +237,14 @@
             <ins class="alt" title="nlp 1.00">ἄλλοι</ins>
           </span>
         </span>
-        <span id="w_42" class="ocr_word" title="bbox 1661 525 1911 578" lang="grc">
+        <span id="w_42_0" class="ocr_word" title="bbox 1661 525 1911 578">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Στωικοὶ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;Στωικοὶ&amp;003E;</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 1938 535 2067 580" lang="grc">
+        <span id="w_42_1" class="ocr_word" title="bbox 1661 525 1911 578">
           <span class="alternatives">
-            <ins title="nlp 2.00">σφαιρικοὺς</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -408,7 +408,7 @@
         </span>
         <span id="w_75" class="ocr_word" title="bbox 1716 735 1915 793">
           <span class="alternatives">
-            <ins title="nlp 2.00">(sc. τοὺς</ins>
+            <ins title="nlp 2.00">τοὺς</ins>
           </span>
         </span>
         <span id="w_76" class="ocr_word" title="bbox 1946 735 2066 779" lang="grc">
@@ -1641,9 +1641,14 @@
             <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
-        <span id="w_291" class="ocr_word" title="bbox 546 2307 674 2362">
+        <span id="w_291_0" class="ocr_word" title="bbox 546 2307 674 2362">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;καὶ&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_291_1" class="ocr_word" title="bbox 546 2307 674 2362">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_292" class="ocr_word" title="bbox 706 2307 748 2349" lang="grc">
@@ -1684,11 +1689,6 @@
         <span id="w_299" class="ocr_word" title="bbox 1751 2309 1933 2361" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φθορὰν</ins>
-          </span>
-        </span>
-        <span id="w_300" class="ocr_word" title="bbox 1959 2316 2064 2346" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">συνεργοῦσι</ins>
           </span>
         </span>
       </span>
@@ -1745,9 +1745,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 331 2446 2063 2505">
-        <span id="w_312" class="ocr_word" title="bbox 331 2453 470 2505">
+        <span id="w_312_0" class="ocr_word" title="bbox 331 2453 470 2505">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;οὖν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;οὖν&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_312_1" class="ocr_word" title="bbox 331 2453 470 2505">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_313" class="ocr_word" title="bbox 501 2454 567 2505" lang="grc">
@@ -1788,11 +1793,6 @@
         <span id="w_320" class="ocr_word" title="bbox 1822 2446 1894 2490" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_321" class="ocr_word" title="bbox 1927 2454 2063 2503" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">σωτῆρας</ins>
           </span>
         </span>
       </span>
