--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0165.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0165.html
@@ -1708,9 +1708,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_306" class="ocr_word" title="bbox 1741 2243 1893 2297">
+        <span id="w_306_0" class="ocr_word" title="bbox 1741 2243 1893 2297">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;σῶμα ἢ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;σῶμα</ins>
+          </span>
+        </span>
+        <span id="w_306_1" class="ocr_word" title="bbox 1741 2243 1893 2297">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἢ&amp;x003E;</ins>
           </span>
         </span>
       </span>
@@ -1740,9 +1745,14 @@
             <ins class="alt" title="nlp 1.00">γάρ</ins>
           </span>
         </span>
-        <span id="w_313" class="ocr_word" title="bbox 961 2314 1130 2370" lang="grc">
+        <span id="w_313_0" class="ocr_word" title="bbox 961 2314 1130 2370">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;φησιν ὁ Εὐριπίδης&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;φησινὁ</ins>
+          </span>
+        </span>
+        <span id="w_313_1" class="ocr_word" title="bbox 961 2314 1130 2370">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Εὐριπίδης&amp;x003E;</ins>
           </span>
         </span>
       </span>
@@ -2171,9 +2181,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_397" class="ocr_word" title="bbox 1093 3021 1225 3069">
+        <span id="w_397_0" class="ocr_word" title="bbox 1093 3021 1225 3069">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;σῶμα ἢ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;σῶμα</ins>
+          </span>
+        </span>
+        <span id="w_397_1" class="ocr_word" title="bbox 1093 3021 1225 3069">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἢ&amp;x003E;</ins>
           </span>
         </span>
         <span id="w_399" class="ocr_word" title="bbox 1324 3021 1468 3068">
