--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0167.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0167.html
@@ -261,9 +261,14 @@
             <ins title="nlp 2.00">et</ins>
           </span>
         </span>
-        <span id="w_44" class="ocr_word" title="bbox 1280 589 1476 629" lang="grc">
+        <span id="w_44_0" class="ocr_word" title="bbox 1280 589 1476 629">
           <span class="alternatives">
-            <ins title="nlp 2.00">pauvorem</ins>
+            <ins class="alt" title="nlp 2.00">panorem</ins>
+          </span>
+        </span>
+        <span id="w_44_1" class="ocr_word" title="bbox 1280 589 1476 629">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_45" class="ocr_word" title="bbox 1688 579 1809 630">
@@ -275,11 +280,6 @@
         <span id="w_46" class="ocr_word" title="bbox 1831 575 1993 630" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">pallorc</ins>
-          </span>
-        </span>
-        <span id="w_47" class="ocr_word" title="bbox 2010 595 2026 621">
-          <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -1964,14 +1964,14 @@
             <ins title="nlp 2.00">Βαβυλώνιος)</ins>
           </span>
         </span>
-        <span id="w_360" class="ocr_word" title="bbox 1851 2718 1976 2759" lang="grc">
+        <span id="w_360_0" class="ocr_word" title="bbox 1851 2718 1976 2759">
           <span class="alternatives">
-            <ins title="nlp 2.00">Κλε - οβνοχιαμ</ins>
+            <ins class="alt" title="nlp 2.00">Κλε-</ins>
           </span>
         </span>
-        <span id="w_361" class="ocr_word" title="bbox 1998 2731 2032 2757">
+        <span id="w_360_1" class="ocr_word" title="bbox 1851 2718 1976 2759">
           <span class="alternatives">
-            <ins title="nlp 2.00">35</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
