--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0168.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0168.html
@@ -1576,9 +1576,9 @@
             <del title="nlp 0.90">sermonem</del>
           </span>
         </span>
-        <span id="w_287" class="ocr_word" title="bbox 1982 2633 2069 2662">
+        <span id="w_287_0" class="ocr_word" title="bbox 1982 2633 2069 2662">
           <span class="alternatives">
-            <ins title="nlp 2.00">mu - τὰς</ins>
+            <ins class="alt" title="nlp 2.00">mu-</ins>
           </span>
         </span>
       </span>
@@ -1590,12 +1590,17 @@
         </span>
         <span id="w_290" class="ocr_word" title="bbox 589 2805 693 2851" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μέχρι</ins>
+            <ins title="nlp 2.00">τὰς μέχρι</ins>
           </span>
         </span>
-        <span id="w_291" class="ocr_word" title="bbox 718 2810 783 2850" lang="grc">
+        <span id="w_291_0" class="ocr_word" title="bbox 718 2810 783 2850">
           <span class="alternatives">
-            <ins title="nlp 2.00">τὰς</ins>
+            <ins class="alt" title="nlp 2.00">τῆς</ins>
+          </span>
+        </span>
+        <span id="w_291_1" class="ocr_word" title="bbox 718 2810 783 2850">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_292" class="ocr_word" title="bbox 808 2805 846 2847">
@@ -1648,12 +1653,6 @@
         <span id="w_301" class="ocr_word" title="bbox 1825 2806 1865 2837">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">11</ins>
-          </span>
-        </span>
-        <span id="w_302" class="ocr_word" title="bbox 1893 2802 2066 2837">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fortasse:</ins>
-            <del title="nlp 0.90">fortasse:</del>
           </span>
         </span>
       </span>
