--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0169.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0169.html
@@ -386,9 +386,14 @@
             <del title="nlp 0.90">II</del>
           </span>
         </span>
-        <span id="w_63" class="ocr_word" title="bbox 1141 1052 1194 1095">
+        <span id="w_63_0" class="ocr_word" title="bbox 1141 1052 1194 1095">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">13—16.</ins>
+            <ins class="alt" title="nlp 2.00">13—15.</ins>
+          </span>
+        </span>
+        <span id="w_63_1" class="ocr_word" title="bbox 1141 1052 1194 1095">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_66" class="ocr_word" title="bbox 1388 1051 1603 1096">
@@ -406,11 +411,6 @@
         <span id="w_68" class="ocr_word" title="bbox 1866 1057 2001 1096" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">noster</ins>
-          </span>
-        </span>
-        <span id="w_69" class="ocr_word" title="bbox 2023 1071 2055 1096">
-          <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
           </span>
         </span>
       </span>
@@ -432,9 +432,14 @@
             <del title="nlp 0.90">causis</del>
           </span>
         </span>
-        <span id="w_73" class="ocr_word" title="bbox 719 1124 835 1182">
+        <span id="w_73_0" class="ocr_word" title="bbox 719 1124 835 1182">
           <span class="alternatives">
-            <ins title="nlp 2.00">doxot</ins>
+            <ins class="alt" title="nlp 2.00">dixit</ins>
+          </span>
+        </span>
+        <span id="w_73_1" class="ocr_word" title="bbox 719 1124 835 1182">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_74" class="ocr_word" title="bbox 867 1125 912 1166">
@@ -465,12 +470,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">deortim</ins>
             <del title="nlp 0.90">deortim</del>
-          </span>
-        </span>
-        <span id="w_79" class="ocr_word" title="bbox 1917 1139 1999 1169">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">esse</ins>
-            <del title="nlp 0.90">esse</del>
           </span>
         </span>
       </span>
@@ -1136,9 +1135,9 @@
             <del title="nlp 0.90">motus</del>
           </span>
         </span>
-        <span id="w_194" class="ocr_word" title="bbox 1663 1983 1990 2025">
+        <span id="w_194_0" class="ocr_word" title="bbox 1663 1983 1990 2025">
           <span class="alternatives">
-            <ins title="nlp 2.00">conuersionum&amp;#x003C;que&amp;#x003E; </ins>
+            <ins class="alt" title="nlp 2.00">conversionum&amp;003C;que&amp;003E;</ins>
           </span>
         </span>
       </span>
