--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0170.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0170.html
@@ -306,9 +306,9 @@
             <ins class="alt" title="nlp 1.00">(90)</ins>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 1936 599 2027 639">
+        <span id="w_57_0" class="ocr_word" title="bbox 1936 599 2027 639">
           <span class="alternatives">
-            <ins title="nlp 2.00">καί&amp;#x003C;τοι&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">καί&amp;x003C;τοι&amp;x003E;</ins>
           </span>
         </span>
       </span>
@@ -439,7 +439,7 @@
         </span>
         <span id="w_83" class="ocr_word" title="bbox 532 807 622 858" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_84" class="ocr_word" title="bbox 654 824 737 864" lang="grc">
@@ -1441,16 +1441,11 @@
             <del title="nlp 0.90">contra</del>
           </span>
         </span>
-        <span id="w_271" class="ocr_word" title="bbox 1969 2103 2047 2132" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">uo- </ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 307 2163 561 2217">
-        <span id="w_272" class="ocr_word" title="bbox 307 2163 561 2217">
+        <span id="w_272_0" class="ocr_word" title="bbox 307 2163 561 2217">
           <span class="alternatives">
-            <ins title="nlp 2.00">luptatem,</ins>
+            <ins class="alt" title="nlp 2.00">voluptatem,</ins>
           </span>
         </span>
       </span>
@@ -1622,9 +1617,9 @@
             <ins class="alt" title="nlp 1.00">λόγον</ins>
           </span>
         </span>
-        <span id="w_301" class="ocr_word" title="bbox 1775 2457 2050 2513" lang="grc">
+        <span id="w_301_0" class="ocr_word" title="bbox 1775 2457 2050 2513">
           <span class="alternatives">
-            <ins title="nlp 2.00">λόγον ἡγούμ&amp;#x003C;ενοντῶν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">ἡγούμ&amp;x003C;ενοντῶν&amp;x003E;</ins>
           </span>
         </span>
       </span>
@@ -1634,14 +1629,14 @@
             <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
-        <span id="w_304" class="ocr_word" title="bbox 540 2531 654 2585">
+        <span id="w_304_0" class="ocr_word" title="bbox 540 2531 654 2585">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τ&amp;#x003E;ῷ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;τ&amp;x003E;ῷ</ins>
           </span>
         </span>
-        <span id="w_305" class="ocr_word" title="bbox 681 2530 896 2585" lang="grc">
+        <span id="w_304_1" class="ocr_word" title="bbox 540 2531 654 2585">
           <span class="alternatives">
-            <ins title="nlp 2.00">κόσ&amp;x003C;μῳ&amp;x003E;.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2038,9 +2033,14 @@
             <ins class="alt" title="nlp 1.00">5</ins>
           </span>
         </span>
-        <span id="w_374" class="ocr_word" title="bbox 1415 3116 1596 3165" lang="grc">
+        <span id="w_374_0" class="ocr_word" title="bbox 1415 3116 1596 3165">
           <span class="alternatives">
-            <ins title="nlp 2.00">καί&amp;#x003C;τοι&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">καὶ&amp;x003C;τοι&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_374_1" class="ocr_word" title="bbox 1415 3116 1596 3165">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_375" class="ocr_word" title="bbox 1622 3115 1808 3152">
@@ -2057,12 +2057,6 @@
         <span id="w_377" class="ocr_word" title="bbox 1860 3115 1925 3152" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_378" class="ocr_word" title="bbox 1948 3114 2053 3158">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">libri;</ins>
-            <del title="nlp 0.90">libri;</del>
           </span>
         </span>
       </span>
