--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0171.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0171.html
@@ -306,8 +306,7 @@
         </span>
         <span id="w_49" class="ocr_word" title="bbox 1262 576 1466 619">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">disseruU.</ins>
-            <del title="nlp 0.90">disseruU.</del>
+            <ins title="nlp 2.00">disseruit.</ins>
           </span>
         </span>
         <span id="w_50" class="ocr_word" title="bbox 2002 595 2017 619">
@@ -324,8 +323,7 @@
         </span>
         <span id="w_52" class="ocr_word" title="bbox 485 647 773 691">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TertuUianus</ins>
-            <del title="nlp 0.90">TertuUianus</del>
+            <ins title="nlp 2.00">Tertullianus</ins>
           </span>
         </span>
         <span id="w_53" class="ocr_word" title="bbox 812 648 937 704">
@@ -359,8 +357,7 @@
         </span>
         <span id="w_58" class="ocr_word" title="bbox 1568 649 1763 704">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">spirUum</ins>
-            <del title="nlp 0.90">spirUum</del>
+            <ins title="nlp 2.00">spiritum</ins>
           </span>
         </span>
         <span id="w_59" class="ocr_word" title="bbox 1805 649 1982 705">
@@ -445,8 +442,7 @@
         </span>
         <span id="w_72" class="ocr_word" title="bbox 1290 791 1483 834">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">uUimum</ins>
-            <del title="nlp 0.90">uUimum</del>
+            <ins title="nlp 2.00">ultimum</ins>
           </span>
         </span>
         <span id="w_73" class="ocr_word" title="bbox 1515 795 1551 833">
@@ -457,14 +453,12 @@
         </span>
         <span id="w_74" class="ocr_word" title="bbox 1581 791 1834 834">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cUtissimum</ins>
-            <del title="nlp 0.90">cUtissimum</del>
+            <ins title="nlp 2.00">altissimum</ins>
           </span>
         </span>
         <span id="w_75" class="ocr_word" title="bbox 1865 794 1986 847">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">afqtie</ins>
-            <del title="nlp 0.90">afqtie</del>
+            <ins title="nlp 2.00">atque</ins>
           </span>
         </span>
       </span>
@@ -804,7 +798,7 @@
         </span>
         <span id="w_136" class="ocr_word" title="bbox 320 1290 510 1349">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Γ 320)</ins>
+            <ins title="nlp 2.00">Γ 320)</ins>
           </span>
         </span>
         <span id="w_137" class="ocr_word" title="bbox 2005 1309 2040 1337">
@@ -848,7 +842,7 @@
         </span>
         <span id="w_144" class="ocr_word" title="bbox 426 1409 494 1468" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Π</ins>
+            <ins title="nlp 2.00">Π</ins>
           </span>
         </span>
         <span id="w_145" class="ocr_word" title="bbox 516 1409 623 1469">
@@ -1446,9 +1440,14 @@
             <ins class="alt" title="nlp 1.00">γράμμασι</ins>
           </span>
         </span>
-        <span id="w_262" class="ocr_word" title="bbox 1035 2368 1281 2422" lang="grc">
+        <span id="w_262_0" class="ocr_word" title="bbox 1035 2368 1281 2422">
           <span class="alternatives">
-            <ins title="nlp 2.00">διαῤήδην</ins>
+            <ins class="alt" title="nlp 2.00">διαῤῥήδην</ins>
+          </span>
+        </span>
+        <span id="w_262_1" class="ocr_word" title="bbox 1035 2368 1281 2422">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_263" class="ocr_word" title="bbox 1314 2367 1508 2422" lang="grc">
@@ -1469,11 +1468,6 @@
         <span id="w_266" class="ocr_word" title="bbox 1853 2371 1988 2417" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">θεοὺς</ins>
-          </span>
-        </span>
-        <span id="w_267" class="ocr_word" title="bbox 2007 2386 2041 2411">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">30</ins>
           </span>
         </span>
       </span>
