--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0172.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0172.html
@@ -295,9 +295,9 @@
             <ins class="alt" title="nlp 1.00">ἔργα</ins>
           </span>
         </span>
-        <span id="w_54" class="ocr_word" title="bbox 1571 746 1828 800" lang="grc">
+        <span id="w_54_0" class="ocr_word" title="bbox 1571 746 1828 800">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τελεῖται&amp;#x003E;·</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;τελεῖται&amp;x003E;·</ins>
           </span>
         </span>
       </span>
@@ -803,13 +803,7 @@
         </span>
         <span id="w_150" class="ocr_word" title="bbox 529 1689 607 1715" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">οὔτ</ins>
-          </span>
-        </span>
-        <span id="w_151" class="ocr_word" title="bbox 621 1672 630 1687">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">οὔτ’</ins>
           </span>
         </span>
         <span id="w_152" class="ocr_word" title="bbox 649 1671 833 1729" lang="grc">
@@ -1054,34 +1048,24 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 524 2099 1894 2158">
-        <span id="w_200" class="ocr_word" title="bbox 524 2101 663 2157" lang="grc">
+        <span id="w_200_0" class="ocr_word" title="bbox 524 2101 663 2157">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἀλλὰ κακοῖς ἐπέκυρσαν&amp;#x003E;,</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;ἀλλὰ</ins>
           </span>
         </span>
-        <span id="w_203" class="ocr_word" title="bbox 1196 2099 1249 2144" lang="grc">
+        <span id="w_200_1" class="ocr_word" title="bbox 524 2101 663 2157">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἐπ’</ins>
+            <ins class="alt" title="nlp 2.00">κακοῖς&amp;x003E;</ins>
           </span>
         </span>
         <span id="w_205" class="ocr_word" title="bbox 1290 2105 1443 2144" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄλλοτε</ins>
+            <ins title="nlp 2.00">&amp;x003C;ἀλλὰ κακοῖς ἐπέκυρσαν&amp;x003E;, ἐπ᾿ ἄλλοτε</ins>
           </span>
         </span>
         <span id="w_206" class="ocr_word" title="bbox 1476 2101 1502 2143" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">δ’</ins>
-          </span>
-        </span>
-        <span id="w_208" class="ocr_word" title="bbox 1543 2102 1653 2144" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄλλα</ins>
-          </span>
-        </span>
-        <span id="w_209" class="ocr_word" title="bbox 1684 2101 1894 2158" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φέρονται</ins>
           </span>
         </span>
       </span>
@@ -1150,9 +1134,14 @@
             <ins class="alt" title="nlp 1.00">ἀνθρώπους</ins>
           </span>
         </span>
-        <span id="w_222" class="ocr_word" title="bbox 825 2318 961 2372">
+        <span id="w_222_0" class="ocr_word" title="bbox 825 2318 961 2372">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;μὲν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;μὲν&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_222_1" class="ocr_word" title="bbox 825 2318 961 2372">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_223" class="ocr_word" title="bbox 993 2332 1106 2373" lang="grc">
@@ -1168,11 +1157,6 @@
         <span id="w_225" class="ocr_word" title="bbox 1464 2317 1548 2360" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
-          </span>
-        </span>
-        <span id="w_226" class="ocr_word" title="bbox 1582 2320 1760 2374" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λυγρῆς,</ins>
           </span>
         </span>
       </span>
@@ -1303,9 +1287,9 @@
             <del title="nlp 0.90">F,</del>
           </span>
         </span>
-        <span id="w_250" class="ocr_word" title="bbox 1937 2529 2049 2566" lang="grc">
+        <span id="w_250_0" class="ocr_word" title="bbox 1937 2529 2049 2566">
           <span class="alternatives">
-            <ins title="nlp 2.00">άε;θσω</ins>
+            <ins class="alt" title="nlp 2.00">ἀείσω</ins>
           </span>
         </span>
       </span>
@@ -1405,9 +1389,14 @@
             <ins title="nlp 2.00">ἔργα</ins>
           </span>
         </span>
-        <span id="w_268" class="ocr_word" title="bbox 729 2637 941 2685" lang="grc">
+        <span id="w_268_0" class="ocr_word" title="bbox 729 2637 941 2685">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τελεῖται&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;τελεῖται&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_268_1" class="ocr_word" title="bbox 729 2637 941 2685">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_269" class="ocr_word" title="bbox 968 2637 1111 2683">
@@ -1443,11 +1432,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">scripsit</ins>
             <del title="nlp 0.90">scripsit</del>
-          </span>
-        </span>
-        <span id="w_275" class="ocr_word" title="bbox 1843 2638 2047 2683" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐῤῥίγασιν;</ins>
           </span>
         </span>
       </span>
@@ -1733,9 +1717,9 @@
             <ins class="alt" title="nlp 1.00">περισσά</ins>
           </span>
         </span>
-        <span id="w_325" class="ocr_word" title="bbox 1951 2850 2046 2900">
+        <span id="w_325_0" class="ocr_word" title="bbox 1951 2850 2046 2900">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τ᾿&amp;#x003E; </ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;τ᾿&amp;x003E;</ins>
           </span>
         </span>
       </span>
@@ -2019,18 +2003,22 @@
         </span>
         <span id="w_375" class="ocr_word" title="bbox 1253 3069 1297 3101">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">2(5</ins>
+            <ins title="nlp 2.00">26</ins>
           </span>
         </span>
-        <span id="w_376" class="ocr_word" title="bbox 1323 3066 1442 3112" lang="grc">
+        <span id="w_376_0" class="ocr_word" title="bbox 1323 3066 1442 3112">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἀλλὰ κακοῖς ἐπέκυρσαν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;ἀλλὰ</ins>
           </span>
         </span>
-        <span id="w_379" class="ocr_word" title="bbox 1884 3066 2044 3112">
+        <span id="w_376_1" class="ocr_word" title="bbox 1323 3066 1442 3112">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">exempli</ins>
-            <del title="nlp 0.90">exempli</del>
+            <ins class="alt" title="nlp 2.00">κακοῖς</ins>
+          </span>
+        </span>
+        <span id="w_379_0" class="ocr_word" title="bbox 1884 3066 2044 3112">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἐπέκυρσαν&amp;x003E;</ins>
           </span>
         </span>
       </span>
@@ -2053,9 +2041,14 @@
             <del title="nlp 0.90">supplevi.</del>
           </span>
         </span>
-        <span id="w_383" class="ocr_word" title="bbox 888 3123 899 3166">
+        <span id="w_383_0" class="ocr_word" title="bbox 888 3123 899 3166">
           <span class="alternatives">
-            <ins title="nlp 2.00">|{</ins>
+            <ins class="alt" title="nlp 2.00">||</ins>
+          </span>
+        </span>
+        <span id="w_383_1" class="ocr_word" title="bbox 888 3123 899 3166">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_384" class="ocr_word" title="bbox 942 3119 1119 3165" lang="grc">
@@ -2086,15 +2079,9 @@
             <ins class="alt" title="nlp 1.00">28</ins>
           </span>
         </span>
-        <span id="w_389" class="ocr_word" title="bbox 1735 3117 1979 3167" lang="grc">
+        <span id="w_389_0" class="ocr_word" title="bbox 1735 3117 1979 3167">
           <span class="alternatives">
-            <ins title="nlp 2.00">άρχικέραυνε</ins>
-          </span>
-        </span>
-        <span id="w_390" class="ocr_word" title="bbox 2006 3120 2044 3162">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">F,</ins>
-            <del title="nlp 0.90">F,</del>
+            <ins class="alt" title="nlp 2.00">ἀρχικέραυνε</ins>
           </span>
         </span>
       </span>
