--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0173.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0173.html
@@ -215,19 +215,19 @@
             <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
-        <span id="w_38_0" class="ocr_word" title="bbox 1345 572 1446 628">
+        <span id="w_38_0_0" class="ocr_word" title="bbox 1345 572 1446 628">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">δίκῆ</ins>
+            <ins class="alt" title="nlp 2.00">δίκῃ</ins>
+          </span>
+        </span>
+        <span id="w_38_0_1" class="ocr_word" title="bbox 1345 572 1446 628">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_38_1" class="ocr_word" title="bbox 1345 572 1446 628">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ὐμνεῖν.</ins>
-          </span>
-        </span>
-        <span id="w_39" class="ocr_word" title="bbox 1478 578 1648 625" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -668,7 +668,7 @@
         </span>
         <span id="w_123" class="ocr_word" title="bbox 1056 1142 1147 1200" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τ)ὰ</ins>
+            <ins title="nlp 2.00">τ)ὰ</ins>
           </span>
         </span>
         <span id="w_124" class="ocr_word" title="bbox 1179 1158 1267 1198" lang="grc">
@@ -678,7 +678,7 @@
         </span>
         <span id="w_126" class="ocr_word" title="bbox 1309 1141 1514 1200" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ὁ)μήρῳ</ins>
+            <ins title="nlp 2.00">Ὁ)μήρῳ</ins>
           </span>
         </span>
         <span id="w_127" class="ocr_word" title="bbox 1546 1141 1617 1185" lang="grc">
@@ -735,7 +735,7 @@
         </span>
         <span id="w_137" class="ocr_word" title="bbox 1719 1212 1979 1270" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(π)ειρᾶτα(ι</ins>
+            <ins title="nlp 2.00">π)ειρᾶτα(ι</ins>
           </span>
         </span>
       </span>
