--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0174.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0174.html
@@ -1486,9 +1486,14 @@
             <del title="nlp 0.90">movente</del>
           </span>
         </span>
-        <span id="w_270" class="ocr_word" title="bbox 1095 2463 1374 2518" lang="grc">
+        <span id="w_270_0" class="ocr_word" title="bbox 1095 2463 1374 2518">
           <span class="alternatives">
-            <ins title="nlp 2.00">prouidentia,</ins>
+            <ins class="alt" title="nlp 2.00">providentia,</ins>
+          </span>
+        </span>
+        <span id="w_270_1" class="ocr_word" title="bbox 1095 2463 1374 2518">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 1405 2475 1519 2516">
@@ -1506,12 +1511,6 @@
         <span id="w_273" class="ocr_word" title="bbox 1623 2461 1724 2503">
           <span class="alternatives">
             <ins title="nlp 2.00">dicit</ins>
-          </span>
-        </span>
-        <span id="w_274" class="ocr_word" title="bbox 1755 2459 2064 2513">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Chrysippus</ins>
-            <del title="nlp 0.90">Chrysippus</del>
           </span>
         </span>
       </span>
@@ -1674,17 +1673,11 @@
         </span>
         <span id="w_301" class="ocr_word" title="bbox 1842 2673 2063 2727">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">impedien-</ins>
+            <ins title="nlp 2.00">impediendum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 328 2753 591 2798">
-        <span id="w_302" class="ocr_word" title="bbox 328 2753 430 2795">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dum</ins>
-            <del title="nlp 0.90">impediendum</del>
-          </span>
-        </span>
         <span id="w_303" class="ocr_word" title="bbox 460 2753 591 2798">
           <span class="alternatives">
             <ins title="nlp 2.00">deum.</ins>
