--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0175.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0175.html
@@ -244,9 +244,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 223 575 2004 633">
-        <span id="w_46" class="ocr_word" title="bbox 223 575 475 632" lang="grc">
+        <span id="w_46_0" class="ocr_word" title="bbox 223 575 475 632">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ἄτλαντα)</ins>
+            <ins class="alt" title="nlp 2.00">(Ἄτλαντα)</ins>
+          </span>
+        </span>
+        <span id="w_46_1" class="ocr_word" title="bbox 223 575 475 632">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_47" class="ocr_word" title="bbox 508 581 712 632" lang="grc">
@@ -292,11 +297,6 @@
         <span id="w_55" class="ocr_word" title="bbox 1677 582 1965 633" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">προνοεῖσθαι</ins>
-          </span>
-        </span>
-        <span id="w_56" class="ocr_word" title="bbox 1989 597 2004 623">
-          <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -2146,9 +2146,14 @@
             <del title="nlp 0.90">fr.</del>
           </span>
         </span>
-        <span id="w_383" class="ocr_word" title="bbox 1156 3166 1297 3197">
+        <span id="w_383_0" class="ocr_word" title="bbox 1156 3166 1297 3197">
           <span class="alternatives">
-            <ins title="nlp 2.00">44—46</ins>
+            <ins class="alt" title="nlp 2.00">44—46</ins>
+          </span>
+        </span>
+        <span id="w_383_1" class="ocr_word" title="bbox 1156 3166 1297 3197">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_384" class="ocr_word" title="bbox 1325 3161 1404 3198">
@@ -2167,11 +2172,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">p.</ins>
             <del title="nlp 0.90">p.</del>
-          </span>
-        </span>
-        <span id="w_387" class="ocr_word" title="bbox 1558 3167 1637 3198" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">219.</ins>
           </span>
         </span>
       </span>
