--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0176.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0176.html
@@ -265,9 +265,14 @@
             <ins title="nlp 2.00">5</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 433 598 687 640">
+        <span id="w_43_0" class="ocr_word" title="bbox 433 598 687 640">
           <span class="alternatives">
-            <ins title="nlp 2.00">obsernantes</ins>
+            <ins class="alt" title="nlp 2.00">observantes</ins>
+          </span>
+        </span>
+        <span id="w_43_1" class="ocr_word" title="bbox 433 598 687 640">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_44" class="ocr_word" title="bbox 717 599 805 640">
@@ -316,11 +321,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quae</ins>
             <del title="nlp 0.90">quae</del>
-          </span>
-        </span>
-        <span id="w_52" class="ocr_word" title="bbox 1959 610 2063 649">
-          <span class="alternatives">
-            <ins title="nlp 2.00">prudentiae</ins>
           </span>
         </span>
       </span>
@@ -470,9 +470,14 @@
             <del title="nlp 0.90">necessarias,</del>
           </span>
         </span>
-        <span id="w_78" class="ocr_word" title="bbox 1425 811 1516 863">
+        <span id="w_78_0" class="ocr_word" title="bbox 1425 811 1516 863">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;et&amp;#x003E; </ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;et&amp;003E;</ins>
+          </span>
+        </span>
+        <span id="w_78_1" class="ocr_word" title="bbox 1425 811 1516 863">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_79" class="ocr_word" title="bbox 1546 809 1654 851">
@@ -485,12 +490,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">faciat</ins>
             <del title="nlp 0.90">faciat</del>
-          </span>
-        </span>
-        <span id="w_81" class="ocr_word" title="bbox 1845 810 2062 860">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iniuriam,</ins>
-            <del title="nlp 0.90">iniuriam,</del>
           </span>
         </span>
       </span>
@@ -1569,9 +1568,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_276" class="ocr_word" title="bbox 810 2232 948 2275">
+        <span id="w_276_0" class="ocr_word" title="bbox 810 2232 948 2275">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_276_1" class="ocr_word" title="bbox 810 2232 948 2275">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_277" class="ocr_word" title="bbox 975 2231 1059 2274">
@@ -1603,11 +1607,6 @@
         <span id="w_282" class="ocr_word" title="bbox 1729 2230 1810 2289" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μὲν</ins>
-          </span>
-        </span>
-        <span id="w_283" class="ocr_word" title="bbox 1841 2231 2049 2288" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐξακούει,</ins>
           </span>
         </span>
       </span>
