--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0177.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0177.html
@@ -253,14 +253,14 @@
             <ins title="nlp 2.00">ἔντιμον,</ins>
           </span>
         </span>
-        <span id="w_45" class="ocr_word" title="bbox 824 860 1155 917" lang="grc">
+        <span id="w_45_0" class="ocr_word" title="bbox 824 860 1155 917">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;εὐχάριστον&amp;#x003E;,</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;εὐχάριστον&amp;003E;,</ins>
           </span>
         </span>
-        <span id="w_46" class="ocr_word" title="bbox 1187 861 1560 919" lang="grc">
+        <span id="w_45_1" class="ocr_word" title="bbox 824 860 1155 917">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁμολογούμενον,</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1145,17 +1145,11 @@
         </span>
         <span id="w_209" class="ocr_word" title="bbox 1934 2093 1996 2123">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">so-</ins>
+            <ins title="nlp 2.00">solitum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 247 2152 1995 2208">
-        <span id="w_210" class="ocr_word" title="bbox 247 2153 367 2195">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">litum</ins>
-            <del title="nlp 0.90">solitum</del>
-          </span>
-        </span>
         <span id="w_211" class="ocr_word" title="bbox 398 2166 480 2205">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">eos,</ins>
