--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0178.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0178.html
@@ -183,9 +183,9 @@
             <ins class="alt" title="nlp 1.00">αὐτὸς</ins>
           </span>
         </span>
-        <span id="w_33" class="ocr_word" title="bbox 1891 452 2020 510" lang="grc">
+        <span id="w_33_0" class="ocr_word" title="bbox 1891 452 2020 510">
           <span class="alternatives">
-            <ins title="nlp 2.00">Κλεάνθης)</ins>
+            <ins class="alt" title="nlp 2.00">(Κλεάνθης)</ins>
           </span>
         </span>
       </span>
