--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0179.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0179.html
@@ -325,8 +325,7 @@
         </span>
         <span id="w_59" class="ocr_word" title="bbox 411 640 672 684">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ThemiBtius</ins>
-            <del title="nlp 0.90">ThemiBtius</del>
+            <ins title="nlp 2.00">Themistius</ins>
           </span>
         </span>
         <span id="w_60" class="ocr_word" title="bbox 704 639 773 683">
@@ -392,9 +391,14 @@
             <ins title="nlp 2.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_72" class="ocr_word" title="bbox 255 715 418 772" lang="grc">
+        <span id="w_72_0" class="ocr_word" title="bbox 255 715 418 772">
           <span class="alternatives">
-            <ins title="nlp 2.00">Πνθίῳ</ins>
+            <ins class="alt" title="nlp 2.00">Πυθίῳ</ins>
+          </span>
+        </span>
+        <span id="w_72_1" class="ocr_word" title="bbox 255 715 418 772">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_73" class="ocr_word" title="bbox 460 712 761 769" lang="grc">
@@ -432,11 +436,6 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_80" class="ocr_word" title="bbox 1802 712 1909 754" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Κλεάνθης</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 166 780 1910 840">
         <span id="w_82" class="ocr_word" title="bbox 342 801 396 828" lang="grc">
@@ -469,9 +468,14 @@
             <ins class="alt" title="nlp 1.00">φιλοσοφίας</ins>
           </span>
         </span>
-        <span id="w_88" class="ocr_word" title="bbox 1478 781 1543 838" lang="grc">
+        <span id="w_88_0" class="ocr_word" title="bbox 1478 781 1543 838">
           <span class="alternatives">
-            <ins title="nlp 2.00">[ἢ]</ins>
+            <ins class="alt" title="nlp 2.00">[ἢ]</ins>
+          </span>
+        </span>
+        <span id="w_88_1" class="ocr_word" title="bbox 1478 781 1543 838">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_89" class="ocr_word" title="bbox 1576 782 1600 825" lang="grc">
@@ -487,11 +491,6 @@
         <span id="w_91" class="ocr_word" title="bbox 1710 787 1786 837" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
-          </span>
-        </span>
-        <span id="w_92" class="ocr_word" title="bbox 1816 796 1910 825" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ποικίλης</ins>
           </span>
         </span>
       </span>
@@ -751,7 +750,7 @@
         </span>
         <span id="w_141" class="ocr_word" title="bbox 990 1139 1155 1182" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Αοmἰ̓́e</ins>
+            <ins title="nlp 2.00">homine</ins>
           </span>
         </span>
         <span id="w_142" class="ocr_word" title="bbox 1188 1152 1238 1182">
@@ -817,8 +816,7 @@
         </span>
         <span id="w_153" class="ocr_word" title="bbox 665 1282 803 1325">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_154" class="ocr_word" title="bbox 829 1280 913 1324">
@@ -839,7 +837,7 @@
         </span>
         <span id="w_157" class="ocr_word" title="bbox 1298 1278 1433 1337" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἶναι</ins>
+            <ins title="nlp 2.00">(εἶναι</ins>
           </span>
         </span>
         <span id="w_158" class="ocr_word" title="bbox 1459 1280 1617 1338" lang="grc">
@@ -1135,8 +1133,7 @@
         </span>
         <span id="w_214" class="ocr_word" title="bbox 670 1711 808 1754">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_215" class="ocr_word" title="bbox 835 1709 919 1753">
@@ -1871,9 +1868,14 @@
             <ins class="alt" title="nlp 1.00">Θυμός.</ins>
           </span>
         </span>
-        <span id="w_355" class="ocr_word" title="bbox 521 2856 632 2912">
+        <span id="w_355_0" class="ocr_word" title="bbox 521 2856 632 2912">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;σ&amp;#x003E;έ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;σ&amp;003E;έ</ins>
+          </span>
+        </span>
+        <span id="w_355_1" class="ocr_word" title="bbox 521 2856 632 2912">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_356" class="ocr_word" title="bbox 659 2855 722 2911">
@@ -1904,11 +1906,6 @@
         <span id="w_361" class="ocr_word" title="bbox 1222 2856 1440 2911" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">βούλομαι</ins>
-          </span>
-        </span>
-        <span id="w_362" class="ocr_word" title="bbox 1471 2870 1629 2899" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ποιεῖν.</ins>
           </span>
         </span>
       </span>
