--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0180.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0180.html
@@ -33,9 +33,14 @@
             <ins class="alt" title="nlp 1.00">βασιλικὸν</ins>
           </span>
         </span>
-        <span id="w_4" class="ocr_word" title="bbox 901 282 1149 342">
+        <span id="w_4_0" class="ocr_word" title="bbox 901 282 1149 342">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;εἶ&amp;#x003E;πε&amp;#x003C;ς&amp;#x003E;·</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;εἶ&amp;x003E;πε&amp;x003C;ς&amp;x003E;·</ins>
+          </span>
+        </span>
+        <span id="w_4_1" class="ocr_word" title="bbox 901 282 1149 342">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1181 291 1297 341" lang="grc">
@@ -51,11 +56,6 @@
         <span id="w_7" class="ocr_word" title="bbox 1475 288 1599 330" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">εἰπὸν</ins>
-          </span>
-        </span>
-        <span id="w_8" class="ocr_word" title="bbox 1629 289 1773 331" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πάλιν.</ins>
           </span>
         </span>
       </span>
@@ -2077,9 +2077,9 @@
             <del title="nlp 0.90">putent</del>
           </span>
         </span>
-        <span id="w_373" class="ocr_word" title="bbox 1904 3084 2094 3131">
+        <span id="w_373_0" class="ocr_word" title="bbox 1904 3084 2094 3131">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;docere&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;docere&amp;x003E;</ins>
           </span>
         </span>
       </span>
